--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nest-mqtt",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A MQTT module for Nest.js",
   "author": "microud",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
-    "url": "https://github.com/microud/nest-mqtt"
+    "url": "https://github.com/128keaton/nest-mqtt"
   },
   "keywords": [
     "nest-mqtt",
@@ -32,9 +32,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.0",
-    "@nestjs/core": "^8.2.0",
-    "mqtt": "^4.3.1",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "mqtt": "^4.3.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -45,25 +45,24 @@
     "mqtt": "^3.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/testing": "8.0.0",
-    "@types/jest": "24.0.11",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/testing": "^9.4.0",
+    "@types/jest": "29.5.2",
     "@types/mqtt": "^2.5.0",
-    "@types/node": "11.13.4",
+    "@types/node": "^18.16.0",
     "@types/supertest": "2.0.7",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
+    "jest": "29.5.0",
+    "prettier": "2.8.8",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.0.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
