--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-mqtt",
+  "name": "@vipstorage/nest-mqtt",
   "version": "0.2.2",
   "description": "A MQTT module for Nest.js",
   "author": "microud",
