--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vipstorage/nest-mqtt",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A MQTT module for Nest.js",
   "author": "microud",
   "license": "MIT",
@@ -32,37 +32,37 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/core": "^9.4.0",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
     "mqtt": "^4.3.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.11 || ^7.0.0 || ^8.0.0",
-    "@nestjs/core": "^6.10.11 || ^7.0.0 || ^8.0.0",
-    "mqtt": "^3.0.0"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "mqtt": "^4.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/testing": "^10.1.3",
     "@types/jest": "29.5.2",
     "@types/mqtt": "^2.5.0",
     "@types/node": "^18.16.0",
     "@types/supertest": "2.0.7",
     "jest": "29.5.0",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "^4.7.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
